# GSORB-SLAM

./: .gitmodules  CMakeLists.txt  README.md  build.sh  imgui.ini  requirements.txt  run.sh
.history/src/: Gaussian_20240722162801.cc  Gaussian_20241024163753.cc  Gaussian_20241024163803.cc  Gaussian_20241024163805.cc  Gaussian_20241024163807.cc  Gaussian_20241024163809.cc  Gaussian_20241024163811.cc  Gaussian_20241024164359.cc  Gaussian_20241024184238.cc  Gaussian_20241024185350.cc  Gaussian_20241024185458.cc  Render_20241024151844.cc  Render_20241024151845.cc
Examples/RGB-D/: replica.yaml  rgbd_replica.cc  rgbd_scannet.cc  rgbd_tum.cc  scannet.yaml
Examples/RGB-D/tum/: TUM1.yaml  TUM2.yaml  TUM3.yaml
Vocabulary/: bin_vocabulary.cpp
include/: Camera.h  Converter.h  Frame.h  Gaussian.h  Initializer.h  KeyFrame.h  LocalMapping.h  LoopClosing.h  Map.h  MapDrawer.h  Rasterizer.cuh  Render.h  System.h  Tracking.h  Utils.h  Viewer.h  Viewer2.h  spatial.h
scripts/: eval_ate.py  gen_eval_model.py  rasterizer.py  replay.py  run_replica.sh  run_scannet.sh  run_tum.sh  tum_ate.py
scripts/dataset_utils/: download_replica.sh  download_tum.sh  pose2traj.sh
src/: Camera.cc  Converter.cc  Frame.cc  Gaussian.cc  Initializer.cc  KeyFrame.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapDrawer.cc  MapPoint.cc  Optimizer.cc  Rasterizer.cu  Render.cc  Sim3Solver.cc  System.cc  Tracking.cc  Utils.cc  Viewer.cc  Viewer2.cc  spatial.cu
